--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.23'
     // https://mvnrepository.com/artifact/org.springframework/spring-context
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.23'
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 
 }
 
