--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,3 +1,3 @@
 mysql.username = root
-mysql.pwd = --------
-mysql.url = jdbc:mysql://localhost:3306/hp
+mysql.pwd = Haresh@123
+mysql.url = jdbc:mysql://localhost:3306/food
